refactor: 파일 타입 이름 변경 및 스트림 개선